--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,5 @@
-/* color palette from <https://github.com/vuejs/theme> */
 :root {
+    /* color palette from <https://github.com/vuejs/theme> */
     --vt-c-white: #ffffff;
     --vt-c-white-soft: #f8f8f8;
     --vt-c-white-mute: #f2f2f2;
@@ -19,10 +19,8 @@
     --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
     --vt-c-text-dark-1: var(--vt-c-white);
     --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-}
 
-/* semantic color variables for this project */
-:root {
+    /* semantic color variables for this project */
     --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-white-soft);
     --color-background-mute: var(--vt-c-white-mute);
@@ -33,7 +31,18 @@
     --color-heading: var(--vt-c-text-light-1);
     --color-text: var(--vt-c-text-light-1);
 
-    --section-gap: 160px;
+    --color-action: hsla(160, 100%, 37%, 1);
+    --color-active: hsla(160, 100%, 37%, 0.2);
+
+    /* sizing */
+    --space-xs: .15rem;
+	--space-sm: .4rem;
+	--space-base: 1rem;
+	--space-lg: 1.8rem;
+	--space-xl: 3.5rem;
+	--space-2xl: 9rem;
+
+	--border-base: 1.5px;
 }
 
 @media (prefers-color-scheme: dark) {
