--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,20 +4,19 @@
     width: 100%;
     height: 100vh;
     margin: 0 auto;
-    padding: 2rem;
     font-weight: normal;
 }
 
 a, .green {
     text-decoration: none;
-    color: hsla(160, 100%, 37%, 1);
+    color: var(--color-action);
     transition: 0.4s;
     padding: 3px;
 }
 
 @media (hover: hover) {
     a:hover {
-        background-color: hsla(160, 100%, 37%, 0.2);
+        background-color: var(--color-active);
     }
 }
 
@@ -30,6 +29,5 @@ a, .green {
     #app {
         display: grid;
         grid-template-columns: 20rem auto;
-        padding: 0 2rem;
     }
 }
