--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,8 @@
     font-weight: normal;
 }
 
-a, .green {
+a,
+.green {
     text-decoration: none;
     color: var(--color-action);
     transition: 0.4s;
@@ -21,11 +22,6 @@ a, .green {
 }
 
 @media (min-width: 700px) {
-    body {
-        display: flex;
-        place-items: center;
-    }
-
     #app {
         display: grid;
         grid-template-columns: 20rem auto;
