--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -69,6 +69,7 @@
 
 body {
     min-height: 100vh;
+    overflow: hidden;
     color: var(--color-text);
     background: var(--color-background);
     transition:
